New Databases; Updated Patient and Recording Classes; Updated Records and RecordReading Activities

--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_record_reading.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_record_reading.xml
@@ -13,7 +13,7 @@
     tools:showIn="@layout/activity_record_reading"
     tools:context="com.example.grant.bluetooth_elicited_brain_stimulation.RecordReadingActivity">
 
-    <EditText
+    <TextView
         android:id="@+id/idTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
