--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_graph.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_graph.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/graphLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.grant.bluetooth_elicited_brain_stimulation.NewRecordingActivity"
-    tools:showIn="@layout/activity_new_recording">
-
-    <Button
-        android:id="@+id/tempButt"
-        android:text="Confirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    tools:showIn="@layout/activity_graph"
+    tools:context="com.example.grant.bluetooth_elicited_brain_stimulation.RecordReadingActivity">
 
 </RelativeLayout>
