--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_new_recording.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_new_recording.xml
@@ -14,13 +14,11 @@
     tools:context="com.example.grant.bluetooth_elicited_brain_stimulation.NewRecordingActivity"
     tools:showIn="@layout/activity_new_recording">
 
-        <ImageView
-            android:src="@drawable/eeg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            />
-
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:src="@drawable/emo_eeg"/>
 
     
     <RelativeLayout
