--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_new_recording.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_new_recording.xml
@@ -14,23 +14,41 @@
     tools:context="com.example.grant.bluetooth_elicited_brain_stimulation.NewRecordingActivity"
     tools:showIn="@layout/activity_new_recording">
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="5dp"
+        android:padding="3dp"
         android:layout_gravity="center"
-        android:src="@drawable/emo_eeg"/>
+        android:background="@color/white"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        android:elevation="2dp"
+        >
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/emo_eeg"
+            />
+    </LinearLayout>
 
-    
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:background="@color/white"
+        android:padding="3dp"
+        android:elevation="2dp"
         >
         <Button
             android:id="@+id/tempButt"
             android:text="Start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentBottom="true"
+            android:textColor="@color/white"
+            android:background="@drawable/rounded_button"/>
 
         <ListView
             android:id="@+id/channelList"
@@ -39,9 +57,6 @@
             android:layout_height="wrap_content"
             ></ListView>
     </RelativeLayout>
-
-
-
 
 
 </LinearLayout>
