--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/colors.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="colorLightRed">#D88D8D</color>
     <color name="white">#FFF</color>
     <color name="black">#000</color>
+    <color name="bg">#F7F7FF</color>
 
 </resources>
