--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/styles.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/styles.xml
@@ -17,4 +17,10 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+    <style name = "DashboardButton">
+        <item name = "android:textSize">14dp</item >
+        <item name = "android:textColor">@color/colorDarkGray</item >
+        <item name = "android:background">@color/bg</item >
+    </style>
+
 </resources>
