--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/fragment_profile.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/fragment_profile.xml
@@ -42,6 +42,12 @@
             />
     </TableRow>
     <TableRow>
+        <EditText android:id="@+id/ethnicity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+    </TableRow>
+    <TableRow>
 
         <Button
             android:id="@+id/save_patient_button"
@@ -51,4 +57,5 @@
             />
 
     </TableRow>
+
 </TableLayout>
