--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/styles.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/styles.xml
@@ -17,10 +17,29 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
-    <style name = "DashboardButton">
+    <style name = "DashboardButton1">
         <item name = "android:textSize">14dp</item >
-        <item name = "android:textColor">@color/colorDarkGray</item >
-        <item name = "android:background">@color/bg</item >
+        <item name = "android:textColor">@color/bg</item >
+        <item name = "android:background">@color/g1</item >
     </style>
-
+    <style name = "DashboardButton2">
+        <item name = "android:textSize">14dp</item >
+        <item name = "android:textColor">@color/bg</item >
+        <item name = "android:background">@color/g2</item >
+    </style>
+    <style name = "DashboardButton3">
+        <item name = "android:textSize">14dp</item >
+        <item name = "android:textColor">@color/bg</item >
+        <item name = "android:background">@color/g3</item >
+    </style>
+    <style name = "DashboardButton4">
+        <item name = "android:textSize">14dp</item >
+        <item name = "android:textColor">@color/bg</item >
+        <item name = "android:background">@color/g4</item >
+    </style>
+    <style name="text">
+        <item name = "android:textSize">14dp</item >
+        <item name = "android:textColor">@color/bg</item >
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
