--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_main.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_main.xml
@@ -5,15 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     android:background="@color/bg"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.grant.bluetooth_elicited_brain_stimulation.MainActivity"
     tools:showIn="@layout/activity_main">
+
+    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
+    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
+    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
+    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
     
     <LinearLayout
         android:layout_height="0dp"
@@ -22,67 +24,139 @@
         android:orientation="horizontal">
 
 
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:drawableTop="@drawable/icon2"
-                style="@style/DashboardButton"
-                android:text="@string/profile_button"
-                android:id="@+id/profile_button"/>
-
-
-
-        <View
-            android:layout_width="1.5dp"
-            android:layout_height="match_parent"
-            android:background="@color/colorLightGray"/>
-
-        <Button
+            <!--<Button-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="1"-->
+                <!--android:drawableTop="@drawable/icon2"-->
+                <!--style="@style/DashboardButton"-->
+                <!--android:text="@string/profile_button"-->
+                <!--android:id="@+id/profile_button"/>-->
+        <LinearLayout
+            android:id="@+id/profile_button"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            style="@style/DashboardButton"
-            android:drawableTop="@drawable/icon2"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:text="@string/records_button"
+            style="@style/DashboardButton1"
+            android:gravity="center_vertical|center_horizontal"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/prof_logo" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/profile_button"
+                style="@style/text"/>
+        </LinearLayout>
+
+
+        <!--<View-->
+            <!--android:layout_width="1.5dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="@color/colorLightGray"/>-->
+
+        <LinearLayout
             android:id="@+id/records_button"
-            />
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            style="@style/DashboardButton2"
+            android:gravity="center_vertical|center_horizontal"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/graph_logo" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/records_button"
+                style="@style/text"/>
+        </LinearLayout>
     </LinearLayout>
 
 
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorLightGray"/>
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:background="@color/colorLightGray"/>-->
 
     <LinearLayout
         android:layout_height="0dp"
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal">
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:drawableTop="@drawable/icon2"
-            style="@style/DashboardButton"
-            android:text="@string/new_recording_button"
-            android:id="@+id/new_recording_button"
-            />
+        <!--<Button-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1"-->
+            <!--android:drawableTop="@drawable/icon2"-->
+            <!--style="@style/DashboardButton1"-->
+            <!--android:text="@string/new_recording_button"-->
+            <!--android:id="@+id/new_recording_button"-->
+            <!--/>-->
 
-       <View
-            android:layout_width="1.5dp"
-            android:layout_height="match_parent"
-            android:background="@color/colorLightGray"/>
-        <Button
+        <LinearLayout
+            android:id="@+id/new_recording_button"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:drawableTop="@drawable/icon2"
-            style="@style/DashboardButton"
-            android:text="@string/new_button"
+            style="@style/DashboardButton3"
+            android:gravity="center_vertical|center_horizontal"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/new_graph_logo" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/new_recording_button"
+                style="@style/text"/>
+        </LinearLayout>
+
+       <!--<View-->
+            <!--android:layout_width="1.5dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="@color/colorLightGray"/>-->
+        <!--<Button-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1"-->
+            <!--android:drawableTop="@drawable/icon2"-->
+            <!--style="@style/DashboardButton1"-->
+            <!--android:text="@string/new_button"-->
+            <!--android:id="@+id/new_button"-->
+            <!--/>-->
+
+        <LinearLayout
             android:id="@+id/new_button"
-            />
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            style="@style/DashboardButton4"
+            android:gravity="center_vertical|center_horizontal"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/tuts_logo2" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tutorial_button"
+                style="@style/text"/>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
