--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/fragment_profile.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/fragment_profile.xml
@@ -57,5 +57,15 @@
             />
 
     </TableRow>
+    <TableRow>
+
+        <Button
+            android:id="@+id/delete_patient_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete"
+            />
+
+    </TableRow>
 
 </TableLayout>
