--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_main.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_main.xml
@@ -12,10 +12,6 @@
     tools:context="com.example.grant.bluetooth_elicited_brain_stimulation.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
-    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
     
     <LinearLayout
         android:layout_height="0dp"
@@ -23,15 +19,6 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-
-            <!--<Button-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_weight="1"-->
-                <!--android:drawableTop="@drawable/icon2"-->
-                <!--style="@style/DashboardButton"-->
-                <!--android:text="@string/profile_button"-->
-                <!--android:id="@+id/profile_button"/>-->
         <LinearLayout
             android:id="@+id/profile_button"
             android:layout_width="0dp"
@@ -93,15 +80,6 @@
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal">
-        <!--<Button-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:drawableTop="@drawable/icon2"-->
-            <!--style="@style/DashboardButton1"-->
-            <!--android:text="@string/new_recording_button"-->
-            <!--android:id="@+id/new_recording_button"-->
-            <!--/>-->
 
         <LinearLayout
             android:id="@+id/new_recording_button"
@@ -128,18 +106,9 @@
             <!--android:layout_width="1.5dp"-->
             <!--android:layout_height="match_parent"-->
             <!--android:background="@color/colorLightGray"/>-->
-        <!--<Button-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:drawableTop="@drawable/icon2"-->
-            <!--style="@style/DashboardButton1"-->
-            <!--android:text="@string/new_button"-->
-            <!--android:id="@+id/new_button"-->
-            <!--/>-->
 
         <LinearLayout
-            android:id="@+id/new_button"
+            android:id="@+id/tutorial_button"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
