--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_record_reading.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_record_reading.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,15 +10,20 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/bg"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_record_reading"
     tools:context="com.example.grant.bluetooth_elicited_brain_stimulation.RecordReadingActivity">
 
 
-    <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@color/white"
+        android:padding="3dp"
+        android:elevation="2dp"
         >
         <TextView
             android:id="@+id/patientInfo"
@@ -28,16 +33,19 @@
             android:textSize="15sp"
             android:padding="10dp"
             android:background="@color/white"
-            android:textColor="@color/colorDarkGray"
-            android:layout_column="1"
+            android:textColor="@color/black"
 
             />
 
-    </TableRow>
+    </LinearLayout>
 
-    <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@color/white"
+        android:padding="3dp"
+        android:elevation="2dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp">
 
@@ -49,9 +57,13 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:background="@color/white"
-            android:textColor="@color/colorDarkGray"
-            android:layout_column="1"
+            android:textColor="@color/black"
             />
-    </TableRow>
+    </LinearLayout>
 
-</TableLayout>
+    <RelativeLayout
+        android:id="@+id/staticGraph"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></RelativeLayout>
+
+</LinearLayout>
