--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_login.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dip"
                     android:layout_marginBottom="20dip"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                          android:inputType="textEmailAddress"/>
                 <!--  Password Label -->
                 <TextView
                     android:layout_width="match_parent"
