--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_login.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:fitsSystemWindows="true">
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
@@ -20,48 +20,95 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dip">
+                android:paddingTop="56dp"
+                android:paddingLeft="24dp"
+                android:paddingRight="24dp">
+
+                <ImageView android:src="@mipmap/brain_icon_flat"
+                           android:layout_width="wrap_content"
+                           android:layout_height="72dp"
+                           android:layout_marginBottom="24dp"
+                           android:layout_gravity="center_horizontal" />
+
                 <!-- Email Label -->
-                <TextView
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:textColor="#372c24"-->
+                    <!--android:text="Email"/>-->
+                <!--<EditText android:id="@+id/log_email"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginTop="5dip"-->
+                    <!--android:layout_marginBottom="20dip"-->
+                    <!--android:singleLine="true"-->
+                          <!--android:inputType="textEmailAddress"/>-->
+
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="#372c24"
-                    android:text="Email"/>
-                <EditText android:id="@+id/log_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dip"
-                    android:layout_marginBottom="20dip"
-                    android:singleLine="true"
-                          android:inputType="textEmailAddress"/>
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp">
+                    <EditText android:id="@+id/log_email"
+                              android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:inputType="textEmailAddress"
+                              android:hint="Email" />
+                </android.support.design.widget.TextInputLayout>
                 <!--  Password Label -->
-                <TextView
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:textColor="#372c24"-->
+                    <!--android:text="Password"/>-->
+                <!--<EditText android:id="@+id/log_password"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginTop="5dip"-->
+                    <!--android:singleLine="true"-->
+                    <!--android:inputType="textPassword"/>-->
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="#372c24"
-                    android:text="Password"/>
-                <EditText android:id="@+id/log_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dip"
-                    android:singleLine="true"
-                    android:inputType="textPassword"/>
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp">
+                    <EditText android:id="@+id/log_password"
+                              android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:inputType="textPassword"
+                              android:hint="Password"/>
+                </android.support.design.widget.TextInputLayout>
                 <!-- Login button -->
-                <Button android:id="@+id/btnLogin"
+                <!--<Button android:id="@+id/btnLogin"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginTop="10dip"-->
+                    <!--android:text="Log in"/>-->
+                <android.support.v7.widget.AppCompatButton
+                    android:id="@+id/btnLogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dip"
-                    android:text="Log in"/>
+                    android:layout_marginTop="24dp"
+                    android:layout_marginBottom="24dp"
+                    android:padding="12dp"
+                    android:text="Login"/>
                 <!-- Link to Registration Screen -->
+                <!--<TextView android:id="@+id/link_to_register"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginTop="40dip"-->
+                    <!--android:layout_marginBottom="40dip"-->
+                    <!--android:text="New Account"-->
+                    <!--android:gravity="center"-->
+                    <!--android:textSize="20dip"-->
+                    <!--android:textColor="#0b84aa"/>-->
                 <TextView android:id="@+id/link_to_register"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="40dip"
-                    android:layout_marginBottom="40dip"
-                    android:text="New Account"
-                    android:gravity="center"
-                    android:textSize="20dip"
-                    android:textColor="#0b84aa"/>
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:layout_marginBottom="24dp"
+                          android:text="No account yet? Create one"
+                          android:gravity="center"
+                          android:textSize="16dip"/>
             </LinearLayout>
         <!-- Login Form Ends -->
     </RelativeLayout>
