Added start/stop recording button to graph activity

--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_graph.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_graph.xml
@@ -14,4 +14,32 @@
     tools:showIn="@layout/activity_graph"
     tools:context="com.example.grant.bluetooth_elicited_brain_stimulation.RecordReadingActivity">
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/start_recording_button"
+        android:src="@mipmap/start_recording_button"
+        android:contentDescription="@string/start_recording_accessibility"
+        android:background="@null"
+        android:layout_above="@+id/new_recording_status_text"
+        android:layout_centerHorizontal="true"/>
+
+    <fragment
+        android:name="com.example.grant.bluetooth_elicited_brain_stimulation.GraphActivity"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_graph_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/start_recording_button"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/new_recording_status_text_string"
+        android:id="@+id/new_recording_status_text"
+        android:layout_below="@+id/start_recording_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="53dp"/>
+
+
 </RelativeLayout>
