--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_login.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    >
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
@@ -27,8 +28,18 @@
                 <ImageView android:src="@mipmap/brain_icon_flat"
                            android:layout_width="wrap_content"
                            android:layout_height="72dp"
-                           android:layout_marginBottom="24dp"
+                           android:layout_marginBottom="10dp"
                            android:layout_gravity="center_horizontal" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:text="NeuroAspire"
+                    android:textStyle="bold"
+                    android:textSize="30sp"
+                    android:textColor="@color/white"
+                    android:gravity="center">
+                </TextView>
 
                 <!-- Email Label -->
                 <!--<TextView-->
@@ -53,6 +64,7 @@
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:inputType="textEmailAddress"
+                              android:textColor="@color/white"
                               android:hint="Email" />
                 </android.support.design.widget.TextInputLayout>
                 <!--  Password Label -->
@@ -91,7 +103,8 @@
                     android:layout_marginTop="24dp"
                     android:layout_marginBottom="24dp"
                     android:padding="12dp"
-                    android:text="Login"/>
+
+                    android:text="Log in"/>
                 <!-- Link to Registration Screen -->
                 <!--<TextView android:id="@+id/link_to_register"-->
                     <!--android:layout_width="match_parent"-->
