--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/colors.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/colors.xml
@@ -21,6 +21,6 @@
     <color name="primary_dark">#4CAF50</color>
     <color name="primary_darker">#388E3C</color>
     <color name="accent">#FFF</color>
-    <color name="iron">#CCCCCC</color>
+    <color name="iron">#F7F7FF</color>
 
 </resources>
