--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_login.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_login.xml
@@ -9,13 +9,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
-        <!-- Header Starts-->
-        <!--  Header Ends -->
-
-        <!-- Footer Start -->
-        <!-- Place footer next to header to set z-index property to minus value -->
-        <!-- Footer Ends -->
-
         <!-- Login Form -->
             <LinearLayout
                 android:orientation="vertical"
@@ -25,11 +18,14 @@
                 android:paddingLeft="24dp"
                 android:paddingRight="24dp">
 
+                <!-- Logo -->
                 <ImageView android:src="@mipmap/brain_icon_flat"
                            android:layout_width="wrap_content"
                            android:layout_height="72dp"
                            android:layout_marginBottom="10dp"
                            android:layout_gravity="center_horizontal" />
+
+                <!-- Title -->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -42,19 +38,6 @@
                 </TextView>
 
                 <!-- Email Label -->
-                <!--<TextView-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textColor="#372c24"-->
-                    <!--android:text="Email"/>-->
-                <!--<EditText android:id="@+id/log_email"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginTop="5dip"-->
-                    <!--android:layout_marginBottom="20dip"-->
-                    <!--android:singleLine="true"-->
-                          <!--android:inputType="textEmailAddress"/>-->
-
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -67,18 +50,8 @@
                               android:textColor="@color/white"
                               android:hint="Email" />
                 </android.support.design.widget.TextInputLayout>
+
                 <!--  Password Label -->
-                <!--<TextView-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textColor="#372c24"-->
-                    <!--android:text="Password"/>-->
-                <!--<EditText android:id="@+id/log_password"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginTop="5dip"-->
-                    <!--android:singleLine="true"-->
-                    <!--android:inputType="textPassword"/>-->
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -90,12 +63,8 @@
                               android:inputType="textPassword"
                               android:hint="Password"/>
                 </android.support.design.widget.TextInputLayout>
+
                 <!-- Login button -->
-                <!--<Button android:id="@+id/btnLogin"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginTop="10dip"-->
-                    <!--android:text="Log in"/>-->
                 <android.support.v7.widget.AppCompatButton
                     android:id="@+id/btnLogin"
                     android:layout_width="match_parent"
@@ -105,23 +74,16 @@
                     android:padding="12dp"
 
                     android:text="Log in"/>
+
                 <!-- Link to Registration Screen -->
-                <!--<TextView android:id="@+id/link_to_register"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginTop="40dip"-->
-                    <!--android:layout_marginBottom="40dip"-->
-                    <!--android:text="New Account"-->
-                    <!--android:gravity="center"-->
-                    <!--android:textSize="20dip"-->
-                    <!--android:textColor="#0b84aa"/>-->
                 <TextView android:id="@+id/link_to_register"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginBottom="24dp"
                           android:text="No account yet? Create one"
+                          android:textStyle="italic"
                           android:gravity="center"
-                          android:textSize="16dip"/>
+                          android:textSize="16sp"/>
             </LinearLayout>
         <!-- Login Form Ends -->
     </RelativeLayout>
