Cleaned up code in GraphActivity and NewRecordingActivity. Added floating button for recording Fully implemented recording Changed positive and negative button to Yes and No for registration agreement

--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_graph.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_graph.xml
@@ -24,4 +24,13 @@
 
     <include layout="@layout/content_graph"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/start_recording_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        app:backgroundTint="@color/white"
+        android:src="@mipmap/start_recording_button" />
+
 </android.support.design.widget.CoordinatorLayout>
